fixed spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -329,7 +329,7 @@ li {
   animation: scale 1s ease-in-out;
 }
 .bio {
-  font-size: 25px;
+  font-size: 28px;
   line-height: 1.3;
   width: 80%;
   opacity: 0;
